[gd_scene load_steps=19 format=4 uid="uid://jl7k3ltwbp41"]

[ext_resource type="Texture2D" uid="uid://fcuqal2ynbts" path="res://Main_Scene_Board/spritesheet.png" id="1_o8ncf"]
[ext_resource type="Texture2D" uid="uid://mmea4eto2a6p" path="res://Main_Scene_Board/Rhombus.png" id="2_rfajf"]
[ext_resource type="Script" path="res://Main_Scene_Board/layer_0.gd" id="3_8wl58"]
[ext_resource type="AudioStream" uid="uid://cslhnxro8mi3y" path="res://Card Game/shuffleandbridge-107641.wav" id="4_euu82"]
[ext_resource type="Script" path="res://Main_Scene_Board/Canvas_Layer/Turn_Label.gd" id="5_52d0j"]
[ext_resource type="Theme" uid="uid://0qo5my5cfjq1" path="res://Main_Scene_Board/Canvas_Layer/Themes/Debug.tres" id="5_jnad2"]
[ext_resource type="Script" path="res://Main_Scene_Board/Canvas_Layer/debug.gd" id="6_5svso"]
[ext_resource type="Script" path="res://Main_Scene_Board/rules_controller.gd" id="6_6e8od"]
[ext_resource type="AudioStream" uid="uid://ccdn50u37npqi" path="res://Card Game/card-sounds-35956.wav" id="6_ye88j"]
[ext_resource type="PackedScene" uid="uid://x0tek8t1bewj" path="res://CPU_and_Player/Player.tscn" id="7_saeg4"]
[ext_resource type="PackedScene" uid="uid://cj15kaxvr44m1" path="res://CPU_and_Player/CPU.tscn" id="9_hsfom"]
[ext_resource type="Script" path="res://Main_Scene_Board/Card_Script.gd" id="9_mpy2d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p1dyh"]
texture = ExtResource("1_o8ncf")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
5:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bqeqs"]
texture = ExtResource("2_rfajf")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1y6tq"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_p1dyh")
sources/1 = SubResource("TileSetAtlasSource_bqeqs")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mfl53"]
properties/0/path = NodePath("CanvasLayer/Label:text")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Cards:DrawArray")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Cards:DiscardArray")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Cards:GunslingerArray")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Cards:HiredGunArray")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Cards:WeaponArray")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Cards:WeaponCardVar")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Cards:HiredGunVar")
properties/7/spawn = true
properties/7/replication_mode = 1

[sub_resource type="GDScript" id="GDScript_7iaxx"]
script/source = "extends CanvasLayer



# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_brdbx"]
script/source = "extends ScrollContainer


func _on_VBoxContainer_size_changed():
	# Set the scroll position to the maximum value
	scroll_vertical = get_v_scroll()"

[node name="Node2D" type="Node2D"]

[node name="Layer0" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAEAAAAIAAUAAAAAAAIAAAAAAAAAAAAAAAMAAAAFAAUAAAAAAAQAAAAFAAUAAAAAAAUAAAAAAAAAAAAAAAYAAAAFAAUAAAAAAAcAAAAFAAUAAAABAAAAAAAIAAUAAAACAAAAAAAAAAAAAAADAAAAAAAFAAUAAAAEAAAAAAAFAAUAAAAFAAAAAAAAAAAAAAAGAAAAAAAHAAMAAAAHAAAAAAAFAAUAAAABAAcAAAAHAAMAAAACAAcAAAAAAAAAAAADAAcAAAAFAAUAAAAEAAcAAAAFAAUAAAAFAAcAAAAAAAAAAAAGAAcAAAAIAAUAAAAHAAcAAAAIAAUAAAAHAAUAAAAAAAAAAAAHAAYAAAAIAAUAAAAHAAQAAAAFAAUAAAAHAAMAAAAFAAUAAAAHAAIAAAAAAAAAAAAHAAEAAAAFAAUAAAABAAEAAAAIAAUAAAADAAMAAAAFAAUAAAADAAQAAAAHAAMAAAAEAAQAAAAFAAUAAAAEAAMAAAAHAAMAAAAGAAYAAAAIAAUAAAAEAAYAAAAHAAMAAAADAAYAAAAHAAMAAAABAAQAAAAHAAMAAAABAAMAAAAHAAMAAAAEAAEAAAAHAAMAAAADAAEAAAAHAAMAAAAGAAEAAAAHAAMAAAAGAAQAAAAHAAMAAAAGAAMAAAAHAAMAAAAGAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAAAHAAMAAAABAAUAAAAAAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAEAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAAAAAAAAAIAAUAAAA=")
tile_set = SubResource("TileSet_1y6tq")
rendering_quadrant_size = 32
script = ExtResource("3_8wl58")

[node name="Layer1" type="TileMapLayer" parent="."]
visible = false
y_sort_enabled = true
use_parent_material = true
tile_set = SubResource("TileSet_1y6tq")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(16, 16)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mfl53")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = SubResource("GDScript_7iaxx")

[node name="Host" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.454
anchor_top = 0.615
anchor_right = 0.82
anchor_bottom = 0.822
offset_left = 0.0799866
offset_top = -0.0500031
offset_right = 0.103973
offset_bottom = -0.00396729
text = "Host"
metadata/_edit_use_anchors_ = true

[node name="Join" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.837
anchor_top = 0.856
anchor_right = 0.973
anchor_bottom = 0.97
offset_left = 0.23999
offset_top = -0.12001
offset_right = -0.0400391
offset_bottom = 0.100006
text = "Join"
metadata/_edit_use_anchors_ = true

[node name="Shuffle cards" type="AudioStreamPlayer" parent="CanvasLayer/Join"]
stream = ExtResource("4_euu82")
volume_db = 24.0
pitch_scale = 4.0

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
visible = false
offset_left = 212.0
offset_top = 233.0
offset_right = 393.0
offset_bottom = 264.0
placeholder_text = "Enter Ip:"
clear_button_enabled = true
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 393.0
offset_top = 9.0
offset_right = 471.0
offset_bottom = 44.0
action_mode = 0
text = "End Turn"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.015
anchor_right = 0.362
anchor_bottom = 0.178
offset_left = -0.120001
offset_top = -0.0500002
offset_right = 0.23999
offset_bottom = -0.0600014
text = "Player X Turn"
script = ExtResource("5_52d0j")

[node name="Draw Card" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.833
anchor_right = 0.212
anchor_bottom = 0.952
offset_top = 0.0899811
offset_right = -28.76
offset_bottom = -0.0400085
text = "Draw Card"

[node name="Draw cards" type="AudioStreamPlayer" parent="CanvasLayer/Draw Card"]
stream = ExtResource("6_ye88j")
volume_db = 24.0
pitch_scale = 4.0

[node name="Show Hand" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.696
anchor_right = 0.225
anchor_bottom = 0.815
offset_top = 0.0799866
offset_bottom = -0.0500336
text = "Show Hand"

[node name="Attack" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.027
anchor_top = 0.567
anchor_right = 0.148
anchor_bottom = 0.681
offset_left = 0.04
offset_top = -0.0900116
offset_right = -0.0400009
offset_bottom = 0.12999
text = "Attack"

[node name="Dynamite" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.223
anchor_top = 0.833
anchor_right = 0.398
anchor_bottom = 0.948
offset_left = -0.0400009
offset_top = 0.0899811
offset_right = -0.0400085
offset_bottom = 0.039978
text = "Dynamite"

[node name="DebugPanel" type="PanelContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 50)
anchors_preset = -1
anchor_left = 0.583
anchor_top = 0.815
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.160004
offset_top = -0.0500183
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jnad2")
script = ExtResource("6_5svso")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DebugPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/DebugPanel/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
script = SubResource("GDScript_brdbx")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugPanel/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6

[node name="Rules_Controller" type="Node" parent="."]
script = ExtResource("6_6e8od")
player_scene = ExtResource("7_saeg4")
CPU_scene = ExtResource("9_hsfom")

[node name="Cards" type="Node" parent="."]
script = ExtResource("9_mpy2d")

[connection signal="child_order_changed" from="." to="Rules_Controller" method="_on_node_2d_child_order_changed"]
[connection signal="pressed" from="CanvasLayer/Host" to="Layer0" method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer/Label" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="Rules_Controller" method="_on_button_pressed"]
[connection signal="ready" from="CanvasLayer/Label" to="Rules_Controller" method="_on_label_ready"]
[connection signal="pressed" from="CanvasLayer/Draw Card" to="Rules_Controller" method="_onCardDraw"]
[connection signal="pressed" from="CanvasLayer/Draw Card" to="Cards" method="_onCardDraw"]
[connection signal="pressed" from="CanvasLayer/Show Hand" to="Rules_Controller" method="_ClaimCards"]
[connection signal="pressed" from="CanvasLayer/Show Hand" to="Cards" method="_ClaimCards"]
[connection signal="pressed" from="CanvasLayer/Attack" to="Rules_Controller" method="Attack"]
[connection signal="pressed" from="CanvasLayer/Dynamite" to="Rules_Controller" method="Dynamite"]
